-XX:ArchiveClassesAtExit does not archive BoundMethodHandle$Species classes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 19
    • Affects Version/s: 19
    • Component/s: hotspot
    • b09

      Please download the attached CDSLambdaInvokerTestDyn.sh and CDSLambdaInvokerTest.java, and run:

      $ bash CDSLambdaInvokerTestDyn.sh $TESTBED
      + mybuild/images/jdk/bin/javac CDSLambdaInvokerTest.java
      + mybuild/images/jdk/bin/jar cf CDSLambdaInvokerTest.jar CDSLambdaInvokerTest.class
      + mybuild/images/jdk/bin/java -cp CDSLambdaInvokerTest.jar -XX:ArchiveClassesAtExit=CDSLambdaInvokerTestDyn.jsa -Xlog:cds+class=debug CDSLambdaInvokerTest
      + cat
      + mybuild/images/jdk/bin/java -XX:SharedArchiveFile=CDSLambdaInvokerTestDyn.jsa -cp CDSLambdaInvokerTest.jar -Xlog:class+load CDSLambdaInvokerTest
      + cat
      ============ checking dumping status ==================================================
      ***** FAILED: BoundMethodHandle$Species_FL should be archived
      ============ checking if lambda form classes/methods are loaded from CDS ==============
      ***** FAILED: BoundMethodHandle$Species_FL should be loaded from top archive


            Assignee:
            Yumin Qi
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: