8280767: -XX:ArchiveClassesAtExit does not archive BoundMethodHandle classes